// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SurveyCard snapshots ended (completed) variant 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    entering={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
  >
    <View
      accessibilityActions={
        [
          {
            "label": "Take survey",
            "name": "activate",
          },
        ]
      }
      accessibilityHint="Completed, Ended, UGX 500 reward. Double tap to take survey."
      accessibilityLabel="Survey: Customer satisfaction survey"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onAccessibilityAction={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "borderRadius": 24,
            "borderWidth": 1,
            "elevation": 2,
            "marginBottom": 12,
            "overflow": "hidden",
            "padding": 20,
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 4,
          },
          {
            "backgroundColor": "#1A1A1A",
            "borderColor": "#2A2A2A",
          },
          false,
          false,
          {
            "transform": [
              {
                "scale": 1,
              },
              {
                "translateY": undefined,
              },
            ],
          },
          undefined,
        ]
      }
      testID="survey-s-1"
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#4D4DFF",
              "borderRadius": 24,
            },
            {
              "opacity": undefined,
            },
          ]
        }
      />
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "space-between",
            "marginBottom": 8,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 9999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 4,
                "paddingHorizontal": 10,
                "paddingVertical": 5,
              },
              {
                "backgroundColor": "rgba(107, 107, 107, 0.1)",
                "borderColor": "rgba(107, 107, 107, 0.18)",
              },
            ]
          }
        >
          <Icon
            color="#6B6B6B"
            size={11}
            strokeWidth={2.5}
          />
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontSize": 10,
                  "letterSpacing": 0.6,
                  "textTransform": "uppercase",
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            Completed
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "flexDirection": "row",
                "gap": 4,
                "paddingHorizontal": 10,
                "paddingVertical": 5,
              },
              {
                "backgroundColor": "rgba(0, 200, 83, 0.1)",
              },
            ]
          }
        >
          <Icon
            color="#00C853"
            size={13}
            strokeWidth={2}
          />
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_700Bold",
                  "fontSize": 14,
                  "letterSpacing": -0.3,
                },
                {
                  "color": "#00C853",
                },
              ]
            }
          >
            UGX 500
          </Text>
        </View>
      </View>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "fontFamily": "Roboto_700Bold",
              "fontSize": 16,
              "letterSpacing": -0.2,
              "lineHeight": 21.6,
              "marginBottom": 4,
            },
            {
              "color": "#FFFFFF",
            },
            false,
          ]
        }
      >
        Customer satisfaction survey
      </Text>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "fontFamily": "Roboto_400Regular",
              "fontSize": 12,
              "letterSpacing": 0.1,
              "lineHeight": 18.6,
              "marginBottom": 12,
            },
            {
              "color": "#A0A0A0",
            },
          ]
        }
      >
        Help us improve by sharing your feedback.
      </Text>
      <View
        style={
          {
            "marginBottom": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 4,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontSize": 10,
                  "letterSpacing": 0.3,
                  "textTransform": "uppercase",
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            Progress
          </Text>
          <View
            style={
              {
                "alignItems": "baseline",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Roboto_700Bold",
                    "fontSize": 12,
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              100
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "Roboto_400Regular",
                    "fontSize": 10,
                    "marginHorizontal": 2,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              /
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "Roboto_400Regular",
                    "fontSize": 10,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              100
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "borderRadius": 9999,
                "height": 6,
                "overflow": "hidden",
              },
              {
                "backgroundColor": "rgba(77, 77, 255, 0.08)",
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 9999,
                  "height": "100%",
                },
                {
                  "backgroundColor": "#00C853",
                  "width": "100%",
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 8,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 9999,
                "flexDirection": "row",
                "gap": 4,
                "minHeight": 32,
                "paddingHorizontal": 10,
                "paddingVertical": 6,
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 0.04)",
              },
            ]
          }
        >
          <Icon
            color="#6B6B6B"
            size={12}
            strokeWidth={2}
          />
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontSize": 10,
                  "letterSpacing": 0.2,
                },
                {
                  "color": "#A0A0A0",
                },
              ]
            }
          >
            Ended
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 9999,
                "flexDirection": "row",
                "gap": 4,
                "minHeight": 32,
                "paddingHorizontal": 10,
                "paddingVertical": 6,
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 0.04)",
              },
            ]
          }
        >
          <Icon
            color="#6B6B6B"
            size={12}
            strokeWidth={2}
          />
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontSize": 10,
                  "letterSpacing": 0.2,
                },
                {
                  "color": "#A0A0A0",
                },
              ]
            }
          >
            4
             Q
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 9999,
                "flexDirection": "row",
                "gap": 4,
                "minHeight": 32,
                "paddingHorizontal": 10,
                "paddingVertical": 6,
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 0.04)",
              },
            ]
          }
        >
          <Icon
            color="#6B6B6B"
            size={12}
            strokeWidth={2}
          />
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontSize": 10,
                  "letterSpacing": 0.2,
                },
                {
                  "color": "#A0A0A0",
                },
              ]
            }
          >
            ~
            2
             min
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginTop": 12,
              "paddingTop": 12,
            },
            {
              "borderTopColor": "rgba(42, 42, 42, 0.5)",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 3,
              }
            }
          >
            <Icon
              color="#00C853"
              size={12}
              strokeWidth={2}
            />
            <Text
              style={
                [
                  {
                    "fontFamily": "Roboto_500Medium",
                    "fontSize": 10,
                  },
                  {
                    "color": "#00C853",
                  },
                ]
              }
            >
              100
              % filled
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 9999,
                "flexDirection": "row",
                "gap": 4,
                "paddingHorizontal": 12,
                "paddingVertical": 6,
              },
              {
                "backgroundColor": "rgba(77, 77, 255, 0.08)",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontSize": 12,
                  "letterSpacing": 0.1,
                },
                {
                  "color": "#4D4DFF",
                },
              ]
            }
          >
            Start
          </Text>
          <Icon
            color="#4D4DFF"
            size={14}
            strokeWidth={2.5}
          />
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`SurveyCard snapshots running variant 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    entering={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
  >
    <View
      accessibilityActions={
        [
          {
            "label": "Take survey",
            "name": "activate",
          },
        ]
      }
      accessibilityHint="Active, 26d, UGX 500 reward. Double tap to take survey."
      accessibilityLabel="Survey: Customer satisfaction survey"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onAccessibilityAction={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "borderRadius": 24,
            "borderWidth": 1,
            "elevation": 2,
            "marginBottom": 12,
            "overflow": "hidden",
            "padding": 20,
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 4,
          },
          {
            "backgroundColor": "#1A1A1A",
            "borderColor": "#2A2A2A",
          },
          false,
          false,
          {
            "transform": [
              {
                "scale": 1,
              },
              {
                "translateY": undefined,
              },
            ],
          },
          undefined,
        ]
      }
      testID="survey-s-1"
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#4D4DFF",
              "borderRadius": 24,
            },
            {
              "opacity": undefined,
            },
          ]
        }
      />
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "space-between",
            "marginBottom": 8,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 9999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 4,
                "paddingHorizontal": 10,
                "paddingVertical": 5,
              },
              {
                "backgroundColor": "rgba(0, 200, 83, 0.1)",
                "borderColor": "rgba(0, 200, 83, 0.18)",
              },
            ]
          }
        >
          <Icon
            color="#00C853"
            size={11}
            strokeWidth={2.5}
          />
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontSize": 10,
                  "letterSpacing": 0.6,
                  "textTransform": "uppercase",
                },
                {
                  "color": "#00C853",
                },
              ]
            }
          >
            Active
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "flexDirection": "row",
                "gap": 4,
                "paddingHorizontal": 10,
                "paddingVertical": 5,
              },
              {
                "backgroundColor": "rgba(0, 200, 83, 0.1)",
              },
            ]
          }
        >
          <Icon
            color="#00C853"
            size={13}
            strokeWidth={2}
          />
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_700Bold",
                  "fontSize": 14,
                  "letterSpacing": -0.3,
                },
                {
                  "color": "#00C853",
                },
              ]
            }
          >
            UGX 500
          </Text>
        </View>
      </View>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "fontFamily": "Roboto_700Bold",
              "fontSize": 16,
              "letterSpacing": -0.2,
              "lineHeight": 21.6,
              "marginBottom": 4,
            },
            {
              "color": "#FFFFFF",
            },
            false,
          ]
        }
      >
        Customer satisfaction survey
      </Text>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "fontFamily": "Roboto_400Regular",
              "fontSize": 12,
              "letterSpacing": 0.1,
              "lineHeight": 18.6,
              "marginBottom": 12,
            },
            {
              "color": "#A0A0A0",
            },
          ]
        }
      >
        Help us improve by sharing your feedback.
      </Text>
      <View
        style={
          {
            "marginBottom": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 4,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontSize": 10,
                  "letterSpacing": 0.3,
                  "textTransform": "uppercase",
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            Progress
          </Text>
          <View
            style={
              {
                "alignItems": "baseline",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Roboto_700Bold",
                    "fontSize": 12,
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              12
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "Roboto_400Regular",
                    "fontSize": 10,
                    "marginHorizontal": 2,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              /
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "Roboto_400Regular",
                    "fontSize": 10,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              100
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "borderRadius": 9999,
                "height": 6,
                "overflow": "hidden",
              },
              {
                "backgroundColor": "rgba(77, 77, 255, 0.08)",
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 9999,
                  "height": "100%",
                },
                {
                  "backgroundColor": "#4D4DFF",
                  "width": "12%",
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 8,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 9999,
                "flexDirection": "row",
                "gap": 4,
                "minHeight": 32,
                "paddingHorizontal": 10,
                "paddingVertical": 6,
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 0.04)",
              },
            ]
          }
        >
          <Icon
            color="#6B6B6B"
            size={12}
            strokeWidth={2}
          />
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontSize": 10,
                  "letterSpacing": 0.2,
                },
                {
                  "color": "#A0A0A0",
                },
              ]
            }
          >
            26d
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 9999,
                "flexDirection": "row",
                "gap": 4,
                "minHeight": 32,
                "paddingHorizontal": 10,
                "paddingVertical": 6,
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 0.04)",
              },
            ]
          }
        >
          <Icon
            color="#6B6B6B"
            size={12}
            strokeWidth={2}
          />
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontSize": 10,
                  "letterSpacing": 0.2,
                },
                {
                  "color": "#A0A0A0",
                },
              ]
            }
          >
            4
             Q
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 9999,
                "flexDirection": "row",
                "gap": 4,
                "minHeight": 32,
                "paddingHorizontal": 10,
                "paddingVertical": 6,
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 0.04)",
              },
            ]
          }
        >
          <Icon
            color="#6B6B6B"
            size={12}
            strokeWidth={2}
          />
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontSize": 10,
                  "letterSpacing": 0.2,
                },
                {
                  "color": "#A0A0A0",
                },
              ]
            }
          >
            ~
            2
             min
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginTop": 12,
              "paddingTop": 12,
            },
            {
              "borderTopColor": "rgba(42, 42, 42, 0.5)",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 3,
              }
            }
          >
            <Icon
              color="#00C853"
              size={12}
              strokeWidth={2}
            />
            <Text
              style={
                [
                  {
                    "fontFamily": "Roboto_500Medium",
                    "fontSize": 10,
                  },
                  {
                    "color": "#00C853",
                  },
                ]
              }
            >
              12
              % filled
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 9999,
                "flexDirection": "row",
                "gap": 4,
                "paddingHorizontal": 12,
                "paddingVertical": 6,
              },
              {
                "backgroundColor": "rgba(77, 77, 255, 0.08)",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontSize": 12,
                  "letterSpacing": 0.1,
                },
                {
                  "color": "#4D4DFF",
                },
              ]
            }
          >
            Start
          </Text>
          <Icon
            color="#4D4DFF"
            size={14}
            strokeWidth={2.5}
          />
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
